examples/test/testpolicy1044.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1044
  namespace: namespace156
spec:
  podSelector:
    matchLabels:
      key7: value8
      key5: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value44
      podSelector:
        matchLabels:
          key28: value16
          key11: value4
